--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -16,8 +16,21 @@ color: white;
 
 .d-none{
   display: none;
+  transition: all 0.5s ease-in-out;
+
 }
 
+.flex{
+  display: flex;
+}
+
+.logo{
+  width: 10rem;
+  height: 10rem;
+  margin: 1rem;  
+  transition: all 0.5s ease-in-out;
+ 
+}
 
 
 .box{
@@ -60,7 +73,7 @@ color: white;
   margin-top: 2rem;  
 }
 
-.login-btn{ 
+.login-btn,.signup-btn{ 
   cursor: pointer;  
   display: block;
   padding: 0.5rem;  
@@ -79,14 +92,67 @@ color: white;
   margin-top: 0.7rem;
 }
 
-.logo{
+.login-section .logo{
   width: 20rem;
   height: 29rem;
   position: absolute;
   left:-10%;
   top: 20%;
+  margin: 0;
   
 }
 
 
 /* end Login section */
+
+/* start signup section  */
+
+.overlay{
+  position: absolute;
+  background-color: rgba(0,0,0,0.78);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width:100%;
+  transition: all 0.5s ease-in-out;
+  
+}
+
+.signup-section .box{
+  margin-top: 5rem;
+  height: 60vh;
+  width: 40%;
+  transition: all 0.5s ease-in-out;
+
+}
+
+.signup-section{
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  height: auto;   
+  height: 70%;
+  width:100%;
+}
+
+.close-btn{
+ position: absolute;
+ top: 1.5rem;
+ left: 1.5rem;
+ font-size: 3.5vw;
+ transform: rotate(45deg);
+ cursor: pointer;
+}
+
+.signup-section p{
+  font-size: 1.5vw;
+  font-weight: bolder;
+}
+
+
+.signup-section  .input-radio{
+  padding: 0.5rem;
+  margin: 0.5rem;
+
+}
+/* end signup section  */
