--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -24,6 +24,11 @@ color: white;
   display: flex;
 }
 
+img{
+  width: 100%;
+  height: 100%;
+}
+
 .logo{
   width: 10rem;
   height: 10rem;
@@ -41,9 +46,8 @@ color: white;
   border-radius: 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  position: relative;
+  justify-content: center; 
+  position: relative;  
 }
 
 .input{
@@ -77,19 +81,22 @@ color: white;
   cursor: pointer;  
   display: block;
   padding: 0.5rem;  
-  margin-top: 2rem;
+  margin-top: 1rem;
   border: none;
   border-radius: 10px;
   width: 100%;
 }
  
 .create-new{
-  background-color: transparent;
+   background-color: transparent; 
   border: 0;
   outline: none;
   cursor: pointer;
   color: white;  
-  margin-top: 0.7rem;
+  margin-top: 0.7rem; 
+  padding: 0.5rem;
+  width: 100%;
+  height: 15%;
 }
 
 .login-section .logo{
@@ -118,11 +125,19 @@ color: white;
   
 }
 
+.signup-section .group{
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
 .signup-section .box{
-  margin-top: 5rem;
-  height: 60vh;
+  margin-top: 10rem;
+  height: 70vh;
   width: 40%;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out; 
+  justify-content: space-around;
 
 }
 
@@ -144,6 +159,19 @@ color: white;
  cursor: pointer;
 }
 
+.group-data{
+  display: flex; 
+}
+
+.group-data .form-group{
+  margin: 0;
+}
+ 
+
+.group-data .input{ 
+  width: 4rem;
+}
+
 .signup-section p{
   font-size: 1.5vw;
   font-weight: bolder;
@@ -155,4 +183,20 @@ color: white;
   margin: 0.5rem;
 
 }
+
+.user-img{
+  height: 45%;
+  width: 35%;
+  margin:  auto;
+  text-align: center;
+  cursor: pointer;
+}
+
+
+.user-img span{
+  font-size: 1.2vw;
+}
+
+
+ 
 /* end signup section  */
