--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -365,6 +365,11 @@ img{
 
 }
 
+.user.selected{
+  background-color: #3D5467;
+  color: white;
+}
+
 
 .message-box{
   width: 60%;
@@ -380,7 +385,8 @@ img{
 .received{
   text-align: left;
   background-color: #A9A6A6;
-  width: 20%;
+  width: 30%;
+  height: auto;
   margin: 1rem auto 1rem 1rem ;
   margin: 1rem;
   padding: 0.3rem;
@@ -389,15 +395,41 @@ img{
 
 .send{
   background-color: #A9A6A6;
-  width: 20%;
+  width: 30%;
+  height: auto;
   margin: 1rem 1rem 1rem auto;
-  text-align: right;
   padding: 0.3rem;
   border-radius:5px ;
-
 }
 
+.date{
+  font-size: 1vw;
+}
 
+.text{
+  font-size: 1.5vw;
+}
+
+.new-message{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.new-message .input{
+  width: 80%;
+  margin: 0.5rem;
+}
+
+.send-message{
+  padding: 0.5rem 0.8rem;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  margin: 0.5rem;
+  cursor: pointer;
+
+}
 
 /* Media Query */
 
