--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -154,7 +154,7 @@ img{
 
 .signup-section .box{
   margin-top: 10rem;
-  height: 70vh;
+  height: 85vh;
   width: 35%;
   transition: all 0.5s ease-in-out; 
   justify-content: space-between;
@@ -205,11 +205,12 @@ img{
 }
 
 .user-img{
-  height: 25%;
-  width: 25%;
+  height: 35%;
+  width: 35%;
   margin:  auto;
   text-align: center;
   cursor: pointer;
+  margin-right: 1.9rem;
 }
 
 
