--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -12,6 +12,7 @@ body{
 background-color:#abaecb;
 color: white;
 
+
 }
 
 .d-none{
@@ -253,7 +254,6 @@ button:hover{
 /* end login page */
 
 
-/* start home page */
 /* nav bar */
 .nabar{
   background-color:#7D1D3F ;
@@ -310,11 +310,17 @@ button:hover{
 }
 /* end nav bar */
 
+
+/* start home page */
 .main{
   margin: 10% 0.5rem 6rem 0.5rem;
   display: flex;
   justify-content: space-evenly;
-  flex-wrap: wrap;
+  flex-wrap: wrap; 
+}
+
+.home,.favorite,.chat{
+  height: 100vh;
 }
 
 .card{
@@ -353,14 +359,20 @@ button:hover{
   border-radius:10px ;
   width: 30%;
   height: 100%;
+  cursor: pointer;
 
 }
 
 .card-footer .like{
   width: 30%;
   height: 100%;
-}
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
 
+}
+.card-footer .like:hover{
+  opacity: 0.7;
+}
 /* end main section */
 
 /* chat page */
@@ -479,15 +491,18 @@ button:hover{
 
  /* footer */
 
-.footer{ 
-  position: absolute;  
-  bottom: 0;
-  left: 0;
+ main{
+  position: relative;
+ }
+
+.footer{    
   width: 100%;
   height: auto;
   background-color:#7D1D3F ;
   color: white;
-  text-align: center;  
+  text-align: center;
+ 
+
 
 }
 
