Frontend: Adding JS  to link Favorite page with API backend and get all  Favorite  user

--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -478,16 +478,9 @@ button:hover{
 /* start fav page */
 
 
- .unfav{
-  display: block;
-  margin-top: 10%;
-  margin-left: 2rem;
- }
-
- .fav{
-  margin-top: 0.5rem;
- }
-
+/* end fav page */
+ 
+ 
 
  /* footer */
 
