Frontend: Linking Api 'messages' with JS to let  user can get all chat with other users 'load them on page' by clicking on their name in the chat page

--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -420,6 +420,7 @@ button:hover{
   border-radius: 10px;
   color: black;
   overflow-y: scroll;
+  position: relative;
 }
 
 
@@ -454,7 +455,10 @@ button:hover{
 .new-message{
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 100%;  
+  position: absolute;
+  bottom: 0;
+  left: 0; 
 }
 
 .new-message .input{
