--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -267,6 +267,7 @@ button:hover{
   justify-content: space-between;
   align-items: center;
   padding: 0.2rem;
+  z-index: 100;
 }
 
  
@@ -421,8 +422,11 @@ button:hover{
   color: black;
   overflow-y: scroll;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
+ 
 
 .received{
   text-align: left;
@@ -453,17 +457,15 @@ button:hover{
 }
 
 .new-message{
-  display: flex;
-  justify-content: space-between;
-  width: 100%;  
-  position: absolute;
-  bottom: 0;
-  left: 0; 
+  margin-top: auto;
+  width: 100%;   
+ 
 }
 
 .new-message .input{
   width: 80%;
-  margin: 0.5rem;
+  margin: 0.5rem; 
+  display: inline;
 }
 
 .send-message{
@@ -472,7 +474,8 @@ button:hover{
   outline: none;
   border-radius: 10px;
   margin: 0.5rem;
-  cursor: pointer;
+  cursor: pointer; 
+  width: 10%;
 
 }
 
