Frontend: Adding chat from the home page to message new user that are not in the chat page

--- a/dating_website_frontend/styles/style.css
+++ b/dating_website_frontend/styles/style.css
@@ -478,6 +478,18 @@ button:hover{
   width: 10%;
 
 }
+.no_message{
+  width: 80%;
+  height: 80%;
+  text-align: center;
+  margin: auto;
+  background-color: #3D5467;
+  padding: 1rem;
+  border-radius: 15px;
+}
+
+p.no_message{ 
+}
 
 /* end chat page */
 
